@@ -174,6 +174,8 @@
   task is created.
 - New 'unwait' verbosity token generates a notification message when a waiting
   task becomes visible.
+- New 'rule.color.merge=yes|no' configuration option, that can optionally
+  turn off color blending engine.
 
 ------ current release ---------------------------
 
